welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: illegal start of simple expression
	if ((day==0 && !vacation) || (day==6 && !vacation) || (day==1 && vacation) || (day==2 && vacation) || (day==3 && vacation) || (day==4 && vacation) || (day==5 && vacation))) {
                                                                                                                                                                                   ^