welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ((day==0 && vacation) || (day==6 && vacation)) { 
		return "off" 
	}
	if ((day==0 && !vacation) || (day==6 && !vacation) || (day==1 && vacation) || (day==2 && vacation) || (day==3 && vacation) || (day==4 && vacation) || (day==5 && vacation))) {
		return "10h00"
	
	}
	else {return "7:00"}
}
